Mise en place des rôles + fixtures User + Création des controlleurs UserDashboard et AdminDashboard

--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -7,9 +7,7 @@
 {{ form_row(form.firstName) }}
 {{ form_row(form.lastName) }}
 {{ form_row(form.email) }}
-{{ form_row(form.plainPassword, {
-            label: 'Password'
-        }) }}
+{{ form_row(form.password)}}
 {{ form_row(form.biography) }}
 {{ form_row(form.photo) }}
 
