--- a/templates/admin_dashboard/index.html.twig
+++ b/templates/admin_dashboard/index.html.twig
@@ -1,20 +1,62 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin.html.twig' %}
 
-{% block title %}Hello AdminDashboardController!{% endblock %}
+{% block title %}Hello AdminDashboardController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: #F5F5F5;
+			padding: 2px 6px;
+		}
+	</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="admin-wrapper">
+		<h1 class="text-center">Liste des utilisateurs</h1>
+		<div class="table-responsive">
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Prénom</th>
+						<th>Nom</th>
+						<th>Adresse mail</th>
+						<th>Photo</th>
+						<th>Description</th>
+						<th>Actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for user in users %}
+						<tr>
+							<td>{{ user.firstName }}</td>
+							<td>{{ user.lastName }}</td>
+							<td>{{ user.email }}</td>
+							<td>
+								{% if user.photo %}
+									<img src="{{ asset('uploads/' ~ user.photo) }}" width="100"></td>
+							{% endif %}
+							<td>{{ user.biography }}</td>
+							<td >
+								<a href="{{ path('app_user_edit', {'id': user.id}) }}">
+									<i class="fas fa-pen"></i>
+								</a>
+								<form class="d-inline-block" method="post" action="{{ path('app_user_delete', {'id': user.id}) }}" onsubmit="return confirm('Etes-vous sûr de vouloir supprimer cet utilisateur?');">
+									<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
+									<button class="btn"><i class="fas fa-trash-alt"></i></button>
+								</form>
+							</td>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/User/Documents/GitHub/test-capturama/src/Controller/AdminDashboardController.php'|file_link(0) }}">src/Controller/AdminDashboardController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/User/Documents/GitHub/test-capturama/templates/admin_dashboard/index.html.twig'|file_link(0) }}">templates/admin_dashboard/index.html.twig</a></code></li>
-    </ul>
-</div>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+		<a class="btn btn-primary" href="{{ path('app_user_new') }}">Ajouter un utilisateur</a>
+	</div>
 {% endblock %}
