--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,9 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}Connexion
 			{% endblock %}
 		</title>
+		<link rel="icon" type="image/png" href="{{ asset('pictures/capturama_2021.svg') }}" />
 		<link rel="shortcut icon" type="image/png" href="{{asset('images/favicon.png')}}"/>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 		<link rel="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css">
