--- a/templates/user/_formEdit.html.twig
+++ b/templates/user/_formEdit.html.twig
@@ -1,5 +1,3 @@
-
-
 {{ form_start(form) }}
 <div class="row">
 	<div class=" form-group">
@@ -12,15 +10,13 @@
 			{{ form_row(form.lastName) }}
 	</div>
 	<div class=" form-group">
-			{{ form_row(form.password) }}
-	</div>
-	<div class=" form-group">
 		{{ form_row(form.biography) }}
 	</div>
 	<div class=" form-group d-flex flex-column">
         <label for="photo">Photo de profil</label>
 		{{ form_widget(form.photo) }}
 	</div>
+    {{ form_row(form._token) }}
 </div>
 <div class="row ">
 	<div class=" d-flex justify-content-center mt-3">
@@ -29,5 +25,3 @@
 			Enregistrer</a>
 	</button>
 </div>
-
-{{ form_end(form) }}
