--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,13 +1,14 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Modification d'un utilisateur{% endblock %}
 
 {% block body %}
-    <h1>Edit User</h1>
-
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_user_index') }}">back to list</a>
-
-    {{ include('user/_delete_form.html.twig') }}
+    
+    <div class="admin-wrapper">
+		<div class="formContainer  m-auto">
+        <h1>Modification d'un utilisateur</h1>
+			{{ include('user/_formEdit.html.twig') }}
+		</div>
+		<a href="{{ path('admin_dashboard') }}">Retour</a>
+	</div>
 {% endblock %}
