--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,11 +1,15 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}Création d'utilisateur
+{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
-
-    {{ include('user/_form.html.twig') }}
-
-    <a href="{{ path('app_user_index') }}">back to list</a>
+	<div class="admin-wrapper">
+		
+		<div class="formContainer  m-auto">
+        <h1 class="text-center">Création d'un nouvel utilisateur</h1>
+			{{ include('user/_form.html.twig') }}
+		</div>
+		<a href="{{ path('admin_dashboard') }}">Retour</a>
+	</div>
 {% endblock %}
