--- a/templates/user_dashboard/index.html.twig
+++ b/templates/user_dashboard/index.html.twig
@@ -1,20 +1,13 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin.html.twig' %}
 
-{% block title %}Hello UserDashboardController!{% endblock %}
+{% block title %}Espace personnel{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/User/Documents/GitHub/test-capturama/src/Controller/UserDashboardController.php'|file_link(0) }}">src/Controller/UserDashboardController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/User/Documents/GitHub/test-capturama/templates/user_dashboard/index.html.twig'|file_link(0) }}">templates/user_dashboard/index.html.twig</a></code></li>
-    </ul>
+<div class="example-wrapper w-100">
+    <h1 class="text-center mt-3">Bienvenue dans votre espace personnel {{app.user.firstname}} {{app.user.lastname}}  !</h1>
+
+    
 </div>
 {% endblock %}
